back.png was cropped again to make sure all negative space is removed and the property 'border radius' was changed from 5% to 7% to compensate for remaining negative space at the bottom edges of back.png

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -17,7 +17,7 @@ img {
     height: 20vh;
     position: center;
     margin: 20px;
-    border-radius: 5%;
+    border-radius: 7%;
 }
 img:hover{
     z-index: 2;
